output data export to CSV a DAT, TitledPane border styling, fixed bug with formatting some doubles (1.0), jfree dependency removed, log4j version upgraded, started readme.md documentation, artifactId changed to "mstruct-gui"

--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cz.kfkl.mstruct</groupId>
-	<artifactId>gui</artifactId>
+	<groupId>cz.kfkl</groupId>
+	<artifactId>mstruct-gui</artifactId>
 	<version>0.2</version>
 	<packaging>jar</packaging>
 	<name>MStructGUI</name>
@@ -11,7 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.release>11</maven.compiler.release>
 		<javafx.version>16</javafx.version>
-		<log4j.version>2.15.0</log4j.version>
+		<log4j.version>2.17.1</log4j.version>
 		<attach.version>4.0.12</attach.version>
 		<gluonfx.plugin.version>1.0.5</gluonfx.plugin.version>
 		<javafx.plugin.version>0.0.6</javafx.plugin.version>
@@ -55,11 +55,6 @@
 			<version>30.1.1-jre</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jfree</groupId>
-			<artifactId>org.jfree.chart.fx</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>${log4j.version}</version>
@@ -79,14 +74,7 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.32</version>
 		</dependency>
-
-		<!-- Guava
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>19.0</version>
-		</dependency>
-		 -->
+		
 	</dependencies>
 
 	<repositories>
@@ -135,9 +123,6 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.3.0</version>
 				<configuration>
-				
-					<!-- <descriptorRefs> <descriptorRef>project</descriptorRef> </descriptorRefs> -->
-					
 					<descriptors>
 						<descriptor>src/assembly/assembly-min.xml</descriptor>
 						<descriptor>src/assembly/assembly-withJDK.xml</descriptor>
