editing excluded regions from chart

--- a/MStructGUI.properties
+++ b/MStructGUI.properties
@@ -13,6 +13,7 @@ mstruct.gui.open.on.startup=d:/Work_Projects/MStruct UI/MStructTEST_dev/aaXray_t
 
 ## If set the file will be used instead of the default template for the HTML chart generation
 #mstruct.gui.plotly.chart.gui.template=
+#mstruct.gui.plotly.chart.edit.template=
 #mstruct.gui.plotly.chart.export.template=
 
 ## Set to false or true (default) to open the exported chart in a new window 
