--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.openjfx</groupId>
+      		<artifactId>javafx-base</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
