Confirmation alerts can be suppressed with properties

--- a/MStructGUI.properties
+++ b/MStructGUI.properties
@@ -18,3 +18,7 @@ mstruct.gui.open.on.startup=d:/Work_Projects/MStruct UI/MStructTEST_dev/aaXray_t
 
 ## Set to false or true (default) to open the exported chart in a new window 
 mstruct.gui.plotly.chart.show.exported=false
+
+## Suppress confirmations when closing current file or remove a component (defaults are true)  
+mstruct.gui.confirm.file.close=false
+mstruct.gui.confirm.component.remove=false
