Default values for new elements initialised from XML templates.

--- a/MStructGUI.properties
+++ b/MStructGUI.properties
@@ -1,4 +1,7 @@
-## The \ is a special character and must be escaped /. However for paths even on windows the / can be used.
+## Used the / (forward slash) for paths. It works even on windows. 
+## The \ is a special character allowing to continue on a new line.
+## Special characters such us \ # = and : must be escaped with \.
+## For more details see: https://www.w3schools.io/file/properties-escape-characters/
 
 
 
@@ -22,3 +25,9 @@ mstruct.gui.plotly.chart.show.exported=false
 ## Suppress confirmations when closing current file or remove a component (defaults are true)  
 mstruct.gui.confirm.file.close=false
 mstruct.gui.confirm.component.remove=false
+
+
+## Allows to define a path to an XML file overwriting default templates for XML elements added through UI.
+## The XML_TEMPLATE_ID allowed values are: ObjCryst, PowderPatternCrystal, PVoightA, SizeLn, StressSimple, RefractionCorr 
+#mstruct.gui.plotly.model.template.XML_TEMPLATE_ID=
+
